--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,4 +55,5 @@ section#redes-sociais img{
     border-radius: 50%;
     box-shadow: 2px 2px 10px black;
     box-sizing: border-box;
+    frame
 }
